fixing bell showing up twice in menu, in bar and in overflow

--- a/src/main/webapp/resources/js/components/Header/main-navigation/style.css
+++ b/src/main/webapp/resources/js/components/Header/main-navigation/style.css
@@ -43,7 +43,6 @@
 }
 
 .announcements-dropdown {
-  padding: 20px;
   cursor: pointer;
 }
 
